# jcore

./: .cproject  .gitignore  .gitmodules  .gitsubmodules  .project  AUTHORS  BCM2837.h  BOOTAA64.EFI  CHANGELOG  Cargo.toml  Dockerfile  ErrorCodes.h  LICENSE  Makefile  OLVASSEL.md  README.md  SSD.odt  all.h  asm.S  atomicfn.c  bench.s  bootboot.efi  bootboot.h  bootboot.img  bootboot.rom  build.sh  call.S  call.s  classes.c  clib.h  compile.bat  compile_efi_clang.bat  crt0.s  efi.h  efi_main.c  efilibs.h  exception.s  hwint.S  hwint.s  ipiint.s  (+37 more)
.cargo/: config.toml
JavaWM/: build.xml
aarch64-cb/: Makefile  OLVASSEL.md  README.md  bootboot.c
aarch64-rpi/: Makefile  OLVASSEL.md  README.md  boot.S  bootboot.c  fs.h  link.ld  load.c  mkboot.c  raspbootcom.c
gc/: gc_chunked.c  gc_new.c
images/: Makefile  OLVASSEL.md  README.md  bochs.rc  mkimg.c
include/: ErrorCodes.h  all.h  clib.h  code.h  domain.h  efilibs.h  i2c.h  interrupt.h  intr.h  irq.h  libcache.h  load.h  lock.h  lowlevel.h  memfs.h  misc.h  portal.h  printf.h  spi.h  spinlock.h  thread.h  types.h
isodir/: jxcore  jxcore.old
kernel/: Cargo.toml  Makefile  aarch64-none-elf.json  aarch64-unknown-linux-gnu.json  layout.ld  testfile.c
loader/: ErrorCodes.h  bootboot.c  clib.h  efi_main.c  efilibs.h  efirom.c  load.c
mkbootimg/: Makefile  OLVASSEL.md  README.md  cpio.c  data.h  ech.c  esp.c  ext2.c  fat.c  fs.h  fsZ.c  fsZ.h  fsz.c  gpt.c  img.c  jamesm.c  jsonc.c  lang.c  lang.h  lean.c  main.c  main.h  minix.c  tar.c  util.c  zlib.c  zlib.h
mykernel-go/: Makefile  go_rt0.s  kernel.go  link.ld
(+409 files in other folders)
