[package]
name = "os"
version = "0.1.0"
authors = ["X. Wang <xuyi@tetra.nl>"]
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
#bootloader = "0.9.23"
volatile = "0.3.0"
spin = "0.9.8"
log = "0.4.19"
uefi = { version = "0.24.0", features = ["logger"], default-features = false }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
